# lab_assets

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml
api/: serializers.py  urls.py  views.py
client/: pyproject.toml
client/src/lab_assets_client/: __init__.py  client.py
devices/: admin.py  forms.py  models.py  tests.py  touchstone_utils.py  urls.py  views.py
devices/migrations/: 0001_initial.py  0002_seed_categories.py  0003_add_more_categories.py  0004_document_url_and_measurement_type.py
devices/static/devices/css/: style.css
devices/templates/devices/: base.html  device_confirm_delete.html  device_detail.html  device_form.html  device_label.html  device_list.html  touchstone_detail.html
devices/templatetags/: device_extras.py
docs/: usage.md
lab_assets/: asgi.py  settings.py  urls.py  wsgi.py
