[project]
name = "lab-assets-client"
version = "0.1.0"
description = "Python client for the RF Lab Asset Management API"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "scikit-rf>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lab_assets_client"]
